--- a/src/styles/ui/Button.scss
+++ b/src/styles/ui/Button.scss
@@ -11,6 +11,7 @@
       transform: none;
     }
   }
+  
   padding: 6px;
   font-weight: 700;
   text-transform: uppercase;
@@ -24,4 +25,31 @@
   color: $background;
   background-color: $accent;
   transition: all 0.3s ease;
+}
+
+.button{
+  &.center {
+    @include center;
+  }
+  &:hover {
+    transform: translateY(-2px);
+  }
+  &:disabled {
+    cursor: default;
+    opacity: 0.4;
+    &:hover {
+      transform: none;
+    }
+  }
+  
+  padding: 05px;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 5px;
+  text-align: center;
+  height: 35px;
+  
+  
+  cursor: pointer;
+  opacity: 1;
 }
