--- a/src/styles/views/Game.scss
+++ b/src/styles/views/Game.scss
@@ -56,4 +56,9 @@
     font-family: $fontMono;
     font-weight: 300;
   }
+  &.status {
+    margin-left: 10px;
+    font-family: $fontMono;
+    font-weight: 300;
+  }
 }
